Simplify code with formatted() call on a text block
https://openjdk.org/jeps/378 describes the addition of text blocks to
Java 15.  Text blocks included the addition of the formatted() method
to the String class so that a parameterized string can be populated by
the call to formatted().